--- a/src/components/AgeCalculator.css
+++ b/src/components/AgeCalculator.css
@@ -1,8 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
 /* Container */
 .Container {
   max-width: 900px;
   margin: 40px auto;
-  padding: 30px;
+  padding: 30px 15px;
   background: linear-gradient(135deg, #6a11cb, #2575fc);
   border-radius: 20px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
@@ -55,7 +61,7 @@
 
 /* Input */
 .date {
-  width: 100%;
+  width: 93%;
   padding: 12px;
   margin: 10px 0 20px;
   border: none;
@@ -109,5 +115,6 @@
 @media (max-width: 768px) {
   .Container_middle {
     flex-direction: column;
+    align-items: center;
   }
 }
