--- a/src/components/AgeCalculator.css
+++ b/src/components/AgeCalculator.css
@@ -36,7 +36,7 @@
 /* Middle Layout */
 .Container_middle {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-start;
   margin-top: 30px;
   gap: 20px;
@@ -47,7 +47,8 @@
 .right,
 .left {
   flex: 1;
-  min-width: 300px;
+  max-width: 300px;
+  width: 88%;
   padding: 20px;
   background: rgba(255, 255, 255, 0.08);
   border-radius: 15px;
